--- a/form.html
+++ b/form.html
@@ -8,7 +8,7 @@
 	<header class="page-header">
 		<div class="page-header__container">
 			<div class="page-header__logo">
-				<a href="index.html">Логотип Мишка</a>
+				<a><img src="#" alt="Логотип Мишка"></a>
 			</div>
 			<nav class="page-header__menu">
 				<button class="page-header__toggle" type="button">Открыть меню</button>
@@ -19,6 +19,8 @@
 					<li class="page-header__menu-item">
 						<a href="form.html">Вязание на заказ</a>
 					</li>
+				</ul>
+				<ul class="page-header__menu-items">
 					<li class="page-header__menu-item page-header__menu-item--icon page-header__menu-item--search">
 						<a href="#">Поиск по сайту</a>
 					</li>
@@ -40,9 +42,9 @@
 					Мы&nbsp;будем рады воплотить в&nbsp;жизнь ваши пожелания! Заполните простую форму заказа и&nbsp;мы&nbsp;свяжемся с&nbsp;вами, чтобы уточнить детали.
 				</div>
 				<fildset class="form__choice">
-					<div class="form__choice-title">
+					<legend class="form__choice-title">
 						Тип
-					</div>
+					</legend>
 					<ul class="form__items">
 						<li class="form__item">
 							<input type="radio" name="choiceproduct" value="interior" id="radio-type1">
@@ -56,9 +58,9 @@
 				</fildset>
 
 				<fildset class="form__choice">
-					<div class="form__choice-title">
+					<legend class="form__choice-title">
 						Цвет
-					</div>
+					</legend>
 					<ul class="form__items">
 						<li class="form__item">
 							<input type="checkbox" name="color" value="white" id="checkbox-color1">
@@ -88,9 +90,9 @@
 				</fildset>
 
 				<fildset class="form__choice">
-					<div class="form__choice-title">
+					<legend class="form__choice-title">
 						ФИО
-					</div>
+					</legend>
 					<ul class="form__items">
 						<li class="form__item">
 							<label for="first-name" class="form__field">Имя:</label>
