Разметка страницы 1 - overlay

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 		</div>
 	</footer>
 
-	<div class="modal">
+	<div class="modal overlay">
 		<div class="modal__title">
 			<h2 class="title-small">Добавить в&nbsp;корзину</h2>
 			<span class="modal__subtitle">Выберите размер:</span>
