--- a/index.html
+++ b/index.html
@@ -38,10 +38,8 @@
 			<h1>Милые штуки ручной работы&nbsp;для&nbsp;дома</h1>
 		</div>
 		<div class="page-menu">
-			<div class="page-menu__items">
-				<a href="#" class="page-menu__item page-menu__item--int">Предметы интерьера</a>
+				<a href="#" class="page-menu__item page-menu__item--interior">Предметы интерьера</a>
 				<a href="#" class="page-menu__item page-menu__item--toy">Детские игрушки</a>
-			</div>
 		</div>
 
 		<section class="product-of-week separator">
@@ -56,15 +54,15 @@
 				<table class="product-options">
 					<tr class="product-options__item">
 						<td class="product-options__name">Цвет:</td>
-						<td class="product-options__option">«Тиффани»/серый</td>
+						<td class="product-options__value">«Тиффани»/серый</td>
 					</tr>
 					<tr class="product-options__item">
 						<td class="product-options__name">Диаметр:</td>
-						<td class="product-options__option">25 см</td>
+						<td class="product-options__value">25 см</td>
 					</tr>
 					<tr class="product-options__item">
 						<td class="product-options__name">Высота</td>
-						<td class="product-options__option">15 см</td>
+						<td class="product-options__value">15 см</td>
 					</tr>
 				</table>
 				<img src="#" alt="Корзинка красивая" class="product-of-week__pic">
@@ -75,9 +73,7 @@
 
 		<section class="advantages">
 			<div class="content__container">
-				<div class="advantages__title">
-					<h2 class="title-small">Коротко о нас</h2>
-				</div>
+				<h2 class="title-small">Коротко о нас</h2>
 				<ul class="advantages__items">
 					<li class="advantages__item advantages__item--eco">Экологически чистые материалы</li>
 					<li class="advantages__item advantages__item--price">Скандинавский стиль по&nbsp;российской цене</li>
@@ -89,21 +85,21 @@
 			</div>
 		</section>
 
-		<section class="reviews slider separator">
+		<section class="reviews separator">
 			<div class="content__container">
-				<div class="reviews__title">
-					<h2 class="title-small">Отзывы</h2>
-				</div>
-				<div class="reviews__list slider__items">
-					<blockquote class="reviews__item slider__item">
-						<p>Я&nbsp;молодая мама, но&nbsp;всё равно фотографии не&nbsp;набирали и&nbsp;близко такого количества лайков, как у&nbsp;популярных инстамамочек. В&nbsp;отчаянии, я&nbsp;накупила аксессуаров и&nbsp;игрушек в&nbsp;Мишке, и&nbsp;мои фотографии сразу стали более стильными, а&nbsp;также набирают больше лайков!</p>
-						<cite>Анастасия Красильникова</cite>
-						<span class="reviews__author-contact">@misssssiskras</span>
-					</blockquote>
-				</div>
-				<div class="slider__controls">
-					<a href="#" class="sliders__btn sliders__btn--prev">назад</a>
-					<a href="#" class="sliders__btn sliders__btn--next">вперед</a>
+				<h2 class="title-small">Отзывы</h2>
+				<div class="slider">
+					<div class="reviews__list slider__items">
+						<blockquote class="reviews__item slider__item">
+							<p class="slider__post">Я&nbsp;молодая мама, но&nbsp;всё равно фотографии не&nbsp;набирали и&nbsp;близко такого количества лайков, как у&nbsp;популярных инстамамочек. В&nbsp;отчаянии, я&nbsp;накупила аксессуаров и&nbsp;игрушек в&nbsp;Мишке, и&nbsp;мои фотографии сразу стали более стильными, а&nbsp;также набирают больше лайков!</p>
+							<cite class="slider__author-name">Анастасия Красильникова</cite>
+							<span class="reviews__author-contact">@misssssiskras</span>
+						</blockquote>
+						<div class="slider__controls">
+							<a href="#" class="sliders__btn sliders__btn--prev">назад</a>
+							<a href="#" class="sliders__btn sliders__btn--next">вперед</a>
+						</div>
+					</div>
 				</div>
 				<a href="#" class="btn">Написать</a>
 			</div>
@@ -111,9 +107,7 @@
 
 		<section class="contacts">
 			<div class="content__container">
-				<div class="contacts__title">
-					<h2 class="title-small">Контакты</h2>
-				</div>
+				<h2 class="title-small">Контакты</h2>
 				<table class="address">
 					<tr>
 						<td class="address__name">e-mail:</td>
@@ -135,44 +129,43 @@
 
 	<footer class="page-footer">
 		<div class="page-footer__container">
-			<div class="socials">
-				<ul class="socials__social-items">
-					<li class="socials__social-item socials__social-item--icon socials__social-item--inst"><a href="https://www.instagram.com">инстаграмм</a></li>
-					<li class="socials__social-item socials__social-item--icon socials__social-item--fb"><a href="https://www.facebook.com">фейсбук</a></li>
-					<li class="socials__social-item socials__social-item--icon socials__social-item--tw"><a href="https://twitter.com">твитер</a></li>
-				</ul>
-			</div>
+			<ul class="socials">
+				<li class="socials__social-item socials__social-item--inst"><a href="https://www.instagram.com">инстаграмм</a></li>
+				<li class="socials__social-item socials__social-item--fb"><a href="https://www.facebook.com">фейсбук</a></li>
+				<li class="socials__social-item socials__social-item--tw"><a href="https://twitter.com">твитер</a></li>
+			</ul>
 			<div class="page-footer__copyright">
 				Разработано:
-				<a class="btn page-footer__copyright-link" href="https://htmlacademy.ru">HTML Academy</a>
+				<a class="page-footer__copyright-link" href="https://htmlacademy.ru">HTML Academy</a>
 			</div>
 		</div>
 	</footer>
 
-	<div class="modal overlay">
-		<div class="modal__title">
-			<h2 class="title-small">Добавить в&nbsp;корзину</h2>
-			<span class="modal__subtitle">Выберите размер:</span>
-		</div>
-		<form action="#" class="in-basket-form" method="post">
-			<ul class="in-basket-form__items">
-				<li class="in-basket-form__item">
-					<input type="radio" name="radiogroup" value="S" id="radio-size1">
-					<label class="order-form__filter-checkbox" for="radio-size2">S</label>
-				</li>
-				<li class="in-basket-form__item">
-					<input type="radio" name="radiogroup" value="M" id="radio-size2">
-					<label class="order-form__filter-checkbox" for="radio-size2">M</label>
-				</li>
-				<li class="in-basket-form__item">
-					<input type="radio" name="radiogroup" value="L" id="radio-size3">
-					<label class="order-form__filter-checkbox" for="radio-size3">"L"</label>
-				</li>
-			</ul>
-			<div class="btn in-basket-form__btn">
-				<input type="submit" value="Добавить">
+	<div class="overlay">
+		<div class="modal">
+			<div class="modal__title">
+				<h2 class="title-small">Добавить в&nbsp;корзину</h2>
+				<span class="modal__subtitle">Выберите размер:</span>
 			</div>
-		</form>
+			<form action="#" class="in-basket-form" method="post">
+				<ul class="in-basket-form__items">
+					<li class="in-basket-form__item">
+						<input type="radio" name="radiogroup" value="S" id="radio-size1">
+						<label class="in-basket-form__size" for="radio-size2">S</label>
+					</li>
+					<li class="in-basket-form__item">
+						<input type="radio" name="radiogroup" value="M" id="radio-size2">
+						<label class="in-basket-form__size" for="radio-size2">M</label>
+					</li>
+					<li class="in-basket-form__item">
+						<input type="radio" name="radiogroup" value="L" id="radio-size3">
+						<label class="in-basket-form__size" for="radio-size3">"L"</label>
+					</li>
+				</ul>
+				<button type="submit" class="btn in-basket-form__btn">Добавить</button>
+			</form>
+		</div>
 	</div>
+
 </body>
 </html>
